force-app/main/default/objects/Commit_Snapshot_Data__c/Commit_Snapshot_Data__c.object-meta.xml
<CustomObject>
    <label>Commit Snapshot Data</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Commit Snapshot Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commit Snapshot Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>