force-app/main/default/objects/Commit_Snapshot_Data__c/fields/Amount_Converted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Converted__c</fullName>
    <label>Amount (Converted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>