force-app/main/default/objects/Commit_Snapshot_Data__c/fields/Oppty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oppty Owner</label>
    <type>TextArea</type>
</CustomField>