force-app/main/default/objects/Commit_Snapshot_Data__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage</label>
    <type>TextArea</type>
</CustomField>